fix: content gap refactor

--- a/admin/src/assets/styles/components/_ModuleViewHeader.scss
+++ b/admin/src/assets/styles/components/_ModuleViewHeader.scss
@@ -32,9 +32,13 @@
 		}
 
 		&__customPanel {
+
+			/*
 			padding: 1em 1.625em;
 			background-color: $white;
 			border-top: 1px solid $grey-light;
+			*/
+			border-bottom: 1px solid $grey-light;
 		}
 
 		.refresh-icon.refreshing svg {
